test: use dynamic ports for unit tests with consul